--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+
+    <string name="facebook_app_id">1518664261769373</string>
+
     <string name="app_name">Neverwas Play</string>
     <string name="title_activity_main">Neverwas Play</string>
-    <string name="title_activity_program_detail">ProgramDetail</string>
+    <string name="title_activity_program_detail"></string>
     <string name="title_activity_post">Post</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_chat">Chat</string>
+    <string name="title_activity_programs">Palinsesto</string>
+    <string name="title_activity_news">News</string>
 
 </resources>
